2008-12-04  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update changelog.

2008-12-04  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (hd_home_view_applet_motion): Show edges of
	  desktop.
	  (hd_home_view_applet_release): Hide edges of desktop.
	* src/home/hd-home.c: Do not show edges if changed in layout mode.

2008-12-04  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-home.c: 
	* src/mb/hd-comp-mgr.c: Made status menu blur out the background
	(had to move to front of stage first) and added pop-up animation 
	for status menu. Fixes NB#93217

2008-12-03  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (hd_home_view_applet_press): Grab the
	  pointer so it is easier to move an applet. Update modified time of
	  an applet.
	  (hd_home_view_applet_release): Ungrab the pointer.

	  (cmp_applet_modified, hd_home_view_restack_applets): Add function to
	  restack the applets clutter actors according to the modified time.

	  (hd_home_view_add_applet): Restack the applets.

	* src/home/hd-home.c (hd_home_applet_close_button_clicked): Remove all
	  GConf settings for an applet if it closed.
	  (hd_home_add_applet): Use applet id from MBWMClient.

	* src/mb/hd-desktop.c (cmp_applet_modified): Add function to compare
	  modified times.
	  (hd_desktop_stack): Stack the applet windows according to the
	  modified time.

	* src/mb/hd-home-applet.c (hd_home_applet_init): Read modified time
	from GConf.

	* src/mb/hd-home-applet.h (modified): Added modified member.

2008-12-03  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher-page.c
	* src/launcher/hd-launcher-grid.c:
	Added extra checks to make sure we don't get Clutter CRITICALs when an
	Icon cannot be found

2008-12-03  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.8

2008-12-03  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Hard-coded UI spec for w50. Fixes NB#94416